# local_vol_project

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: daily_collection.yaml  realdata_backtest.yaml  realdata_calibration.yaml  spy_calibration.yaml  theta_creds.example.txt
data/raw/: spy_history.csv  spy_options.csv  spy_options.parquet  spy_options_snapshot.parquet
docs/: data_workflow.md  findings.md  project_summary.md  system_architecture.md  theory_and_repo_walkthrough.tex
docs/reference_outputs/: README.md  calibration_sensitivity.md  reference_report.md
notebooks/: 01_data_exploration.ipynb  02_iv_surface_fitting.ipynb  03_local_vol_extraction.ipynb  04_pricing_validation.ipynb  05_hedging_backtest.ipynb
scripts/: append_option_panel_cboe.py  archive_option_snapshot.py  backfill_theta_option_panel.py  build_option_panel_cboe.py  demo_snapshot_pipeline.py  generate_report.py  install_windows_daily_snapshot_task.py  precompute_lv_grids.py  run_backtest_history_windows.py  run_backtest_market_panel.py  run_calibration_sensitivity_sweep.py  run_canonical_daily_update.py  run_canonical_daily_update_task.cmd  run_pricing_validation.py  run_snapshot_calibration.py  run_snapshot_workflow.py  setup_theta_terminal.cmd  start_theta_terminal.cmd
src/arbitrage/: density.py  projection.py  static_checks.py
src/hedging/: backtest.py  delta_hedger.py  market_panel_backtest.py  metrics.py  transaction_costs.py
src/implied_volatility/: black_scholes.py  iv_solver.py  surface.py
src/local_volatility/: dupire.py  (+2 more)
(+58 files in other folders)
