[tool.poetry]
name = "local-vol-project"
version = "0.1.0"
description = ""
authors = ["Dyuman Bhattacharya <dyumanb@gmail.com>"]
readme = "README.md"

# This is the key line: install *all* packages found under src/
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13"

numpy = "^2.4"
scipy = "^1.16"
pandas = "^2.3"
matplotlib = "^3.10"
plotly = "^6.5"
pydantic = "^2.12"
pyyaml = "^6.0"
h5py = "^3.15"
pyarrow = "^22.0"
yfinance = "^1.0"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14"
mypy = "^1.19"
pytest = "^9.0"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
